--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-  - "2.7"
+  - "2.7.10"
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: nosetests -v --with-coverage --cover-tests tests
+script: nosetests -v --with-coverage --cover-tests test
