--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ numpy==1.14.0
 nose==1.3.7
 pandas==0.16.2
 coloredlogs==5.2
+codecov==2.0.5
+coverage==4.3.4
 pillow==3.4.2
 biopython==1.65
 reportlab==3.3.0
