Update to accomodate panadas for automated transcript part
#28

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = iAnnotateSV
 version = attr: src.VERSION
 description = The module helps to annotate structural variants called using NGS on human.
 long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
-keywords = structural, variants, NGS, MSK-IMPACT
+keywords = structural, variants, NGS, MSK-IMPACT, MSK-ACCESS
 license = Apache Software License
 classifiers =
     Programming Language :: Python
@@ -13,3 +13,25 @@ classifiers =
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Bio-Informatics
     Development Status :: 3
+
+[bumpversion]
+current_version = 1.1.0
+commit = True
+tag = True
+
+[bumpversion:file:iAnnotateSV/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
+
+[bdist_wheel]
+universal = 1
+
+[flake8]
+exclude = docs
+
+[aliases]
+# Define setup.py command aliases here
+test = nosetests
+
+[tool:nosetests]
+collect_ignore = ['setup.py']
