--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy==1.14.0
-openpyxl==2.4.0
+numpy==1.16.5
+openpyxl==2.6.4
 nose==1.3.7
 pandas==0.24.2
-coloredlogs==5.2
+coloredlogs==14.0
 codecov==2.0.5
 coverage==4.3.4
-pillow==3.4.2
-biopython==1.65
-reportlab==3.3.0
+pillow==6.2.1
+biopython==1.76
+reportlab==3.5.42
+bump2version==1.0.0
