--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ classifiers =
     Operating System :: OS Independent
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Bio-Informatics
-    Development Status :: 3
+    Development Status :: 5 - Production/Stable
 
 [bumpversion]
 current_version = 1.2.0
