--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with nosetest
       run: |
-        nosetests -v --with-coverage --cover-tests tests
+        nosetests -v --with-coverage --cover-tests
