--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,33 +1,19 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
-name: Upload Python Package
+name: Publish package to PyPI
 
 on:
-  release:
-    types: [published]
+    push:
+        tags:
+            - "*.*.*"
 
 jobs:
-  deploy:
-
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/iAnnotateSV
-    permissions:
-      id-token: write
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10.14'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
-    - name: Build
-      run: |
-        python setup.py sdist bdist_wheel
-    - name: pypi-publish
-      uses: pypa/gh-action-pypi-publish@v1.9.0
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Build and publish to pypi
+              uses: JRubics/poetry-publish@v1.11
+              with:
+                  pypi_token: ${{ secrets.PYPI_API_TOKEN }}
