--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.14]
+        python-version: [3.10]
 
     steps:
     - name: Checkout github repo (+ download lfs dependencies)
@@ -39,6 +39,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with nosetest
+    - name: Test with poetry
       run: |
-        nosetests -v --with-coverage --cover-tests
+        poetry export --format requirements.txt --output requirements.txt --without-hashes
