--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ exclude = docs
 
 [aliases]
 # Define setup.py command aliases here
-test = nosetests
+test = poetry
 
-[tool:nosetests]
+[tool:poetry]
 collect_ignore = ['setup.py']
