--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "iAnnotateSV"
 version = "1.3.0"
 description = "iAnnotateSV is a Python library and command-line software toolkit to annotate and visualize structural variants detected from Next Generation DNA sequencing data."
 authors = ["Ronak Shah <shahr2@mskcc.org>"]
-readme = "See README"
+readme = "docs/README.md"
 packages = [{include = "iAnnotateSV"}]
 include = [
     "iAnnotateSV/data/*",
